--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "country-code-emoji": "^2.3.0",
+    "crypto-js": "^4.1.1",
     "generate-password": "^1.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-use": "^17.3.1",
     "web-vitals": "^1.0.1",
     "zxcvbn": "^4.4.2"
   },
