git ignore and example toml file

--- a/wrangler/wrangler.toml.example
+++ b/wrangler/wrangler.toml.example
@@ -1,7 +1,8 @@
+
 name = "passwrd"
 type = "javascript"
 
-account_id = "e009db83777a491f852bb4f2d7e154da"
+account_id = ""
 workers_dev = true
 route = ""
 zone_id = ""
