--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "@craco/craco": "^6.2.0",
     "@heroicons/react": "^1.0.4",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
     "crypto-js": "^4.1.1",
     "generate-password": "^1.6.1",
     "niceware": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "react-use": "^17.3.1",
-    "web-vitals": "^1.0.1",
+    "web-vitals": "2.1.2",
     "zxcvbn": "^4.4.2"
   },
   "scripts": {
@@ -44,8 +44,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
-    "autoprefixer": "^9",
-    "postcss": "^7",
+    "autoprefixer": "10.4.0",
+    "postcss": "8.4.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
