--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "crypto-js": "^4.1.1",
-    "generate-password": "^1.6.1",
+    "generate-password": "1.7.0",
     "niceware": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -44,6 +44,6 @@
   "devDependencies": {
     "autoprefixer": "10.4.0",
     "postcss": "8.4.5",
-    "tailwindcss": "^3.0.2"
+    "tailwindcss": "3.0.3"
   }
 }
