--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
-    "crypto-js": "^4.1.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "crypto-es": "^1.2.7",
     "generate-password": "1.7.0",
     "niceware": "^2.0.2",
+    "omgopass": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -44,6 +47,6 @@
   "devDependencies": {
     "autoprefixer": "10.4.0",
     "postcss": "8.4.5",
-    "tailwindcss": "3.0.3"
+    "tailwindcss": "3.0.7"
   }
 }
