--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.4",
+    "@sentry/react": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "crypto-es": "^1.2.7",
+    "dotenv": "^16.0.0",
     "generate-password-browser": "^1.1.0",
     "omgopass": "^3.2.1",
     "react": "^17.0.2",
